@@ -56,6 +56,9 @@ Core
 * Fix the [error] tag so it does not attempt to replace format specifiers other
   than %s in the text or std_label attributes.
 
+* Vend::SQL_Parser required LIMIT clause to be lowercase when it should be
+  case-insensitive 
+
 UserDB
 ------
 
